Cleanup old cheat sheet

--- a/cs131-cheat-sheet.tex
+++ b/cs131-cheat-sheet.tex
@@ -15,6 +15,7 @@
 \usepackage[framemethod=tikz]{mdframed}
 \usepackage{microtype}
 \usepackage{pdfpages}
+\usepackage{lipsum}
 
 \let\bar\overline
 
@@ -24,14 +25,6 @@
 %\footnotesize
 \small
 \begin{multicols*}{5}
-\input{inhalt/aussagen}
-\input{inhalt/mengen}
-\input{inhalt/relationen}
-\input{inhalt/abbildungen}
-%\input{inhalt/beweise} 
-\input{inhalt/graphen}
-%\input{inhalt/graphalgo}
-%\input{inhalt/bool}
-%\input{inhalt/formeln}
+\input{inhalt/dummy}
 \end{multicols*}
 \end{document}
