Update building blocks and rename

--- a/cs131-cheat-sheet.tex
+++ b/cs131-cheat-sheet.tex
@@ -26,6 +26,6 @@
 \small
 \begin{multicols*}{5}
 \input{inhalt/paradigms}
-\input{inhalt/building-blocks}
+\input{inhalt/prog-langs}
 \end{multicols*}
 \end{document}
