Add support for minted

--- a/cs131-cheat-sheet.tex
+++ b/cs131-cheat-sheet.tex
@@ -15,7 +15,11 @@
 \usepackage[framemethod=tikz]{mdframed}
 \usepackage{microtype}
 \usepackage{pdfpages}
+\usepackage[]{minted}
 \usepackage{lipsum}
+% https://tex.stackexchange.com/a/112573
+\usepackage[most]{tcolorbox}
+\usepackage{etoolbox}
 
 \let\bar\overline
 
