--- a/inhalt/def.tex
+++ b/inhalt/def.tex
@@ -32,6 +32,26 @@ von~Tim~S.,~Seite~\thepage~von~2
 \end{mdframed}
 }
 
+% more compact minted custom frames
+\newtcolorbox{mintedbox}[1][]
+{
+  colframe = black!20,
+  colback  = white,
+  left = 0pt,
+  right = 0pt,
+  top = 0pt,
+  bottom = 0pt,
+  #1,
+}
+
+% make code font smaller
+\setminted{fontsize=\footnotesize}
+
+% nicer frame for minted environments
+\BeforeBeginEnvironment{minted}{\begin{mintedbox}}%
+\AfterEndEnvironment{minted}{\end{mintedbox}}%
+
+
 \makeatletter % Author: https://tex.stackexchange.com/questions/218587/how-to-set-one-header-for-each-page-using-multicols
 \renewcommand{\section}{\@startsection{section}{1}{0mm}%
                                 {.2ex}%
