Increase size of section titles

--- a/inhalt/def.tex
+++ b/inhalt/def.tex
@@ -56,7 +56,7 @@ von~Tim~S.,~Seite~\thepage~von~2
 \renewcommand{\section}{\@startsection{section}{1}{0mm}%
                                 {.2ex}%
                                 {.2ex}%x
-                                {\color{myblue}\sffamily\small\bfseries}}
+                                {\color{myblue}\sffamily\normalsize\bfseries}}
 \renewcommand{\subsection}{\@startsection{subsection}{1}{0mm}%
                                 {.2ex}%
                                 {.2ex}%x
