Add python section

--- a/cs131-cheat-sheet.tex
+++ b/cs131-cheat-sheet.tex
@@ -31,5 +31,6 @@
 \begin{multicols*}{5}
 \input{inhalt/paradigms}
 \input{inhalt/prog-langs}
+\input{inhalt/python.tex}
 \end{multicols*}
 \end{document}
