Rename sections directory

--- a/cs131-cheat-sheet.tex
+++ b/cs131-cheat-sheet.tex
@@ -23,14 +23,14 @@
 
 \let\bar\overline
 
-\include{inhalt/def}
+\include{sections/def}
 
 \begin{document}
 %\footnotesize
 \small
 \begin{multicols*}{5}
-\input{inhalt/paradigms}
-\input{inhalt/prog-langs}
-\input{inhalt/python.tex}
+\input{sections/paradigms}
+\input{sections/prog-langs}
+\input{sections/python.tex}
 \end{multicols*}
 \end{document}
