Add Python and Haskell sections

--- a/cs131-cheat-sheet.tex
+++ b/cs131-cheat-sheet.tex
@@ -29,8 +29,11 @@
 %\footnotesize
 \small
 \begin{multicols*}{5}
-\input{sections/paradigms}
-\input{sections/prog-langs}
+\input{sections/paradigms.tex}
+\input{sections/prog-langs.tex}
 \input{sections/python.tex}
+\input{sections/python-snippets.tex}
+\input{sections/haskell.tex}
+\input{sections/haskell-snippets.tex}
 \end{multicols*}
 \end{document}
