--- a/cs131-cheat-sheet.tex
+++ b/cs131-cheat-sheet.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
 \usepackage[T1]{fontenc}
+\usepackage{lmodern}
 %\usepackage[LY1,T1]{fontenc}
 %\usepackage{frutigernext}
 %\usepackage[lf,minionint]{MinionPro}
