Update cs131 sheet to week 10

--- a/cs131-cheat-sheet.tex
+++ b/cs131-cheat-sheet.tex
@@ -36,5 +36,11 @@
 \input{sections/python-snippets.tex}
 \input{sections/haskell.tex}
 \input{sections/haskell-snippets.tex}
+\input{sections/vars-types.tex}
+\input{sections/type-checking.tex}
+\input{sections/conv-cast.tex}
+\input{sections/scoping.tex}
+\input{sections/mem-safety.tex}
+\input{sections/garb-collection.tex}
 \end{multicols*}
 \end{document}
