Finish lectures content

--- a/cs131-cheat-sheet.tex
+++ b/cs131-cheat-sheet.tex
@@ -42,5 +42,17 @@
 \input{sections/scoping.tex}
 \input{sections/mem-safety.tex}
 \input{sections/garb-collection.tex}
+\input{sections/mutability.tex}
+\input{sections/var-binding.tex}
+\input{sections/param-passing.tex}
+\input{sections/error-handling.tex}
+\input{sections/polymorphism.tex}
+\input{sections/oop.tex}
+\input{sections/inheritance.tex}
+\input{sections/dynamic-dispatch.tex}
+\input{sections/iteration.tex}
+\input{sections/concurrency.tex}
+\input{sections/prolog.tex}
+\input{sections/prolog-snippets.tex}
 \end{multicols*}
 \end{document}
