--- a/sections/def.tex
+++ b/sections/def.tex
@@ -54,6 +54,25 @@ von~Tim~S.,~Seite~\thepage~von~2
 \BeforeBeginEnvironment{minted}{\begin{mintedbox}}%
 \AfterEndEnvironment{minted}{\end{mintedbox}}%
 
+% color for inline boxes
+\definecolor{codegray}{rgb}{0.95,0.95,0.95}
+\lstset{%
+  basicstyle=\ttfamily,
+  breaklines = true,
+  backgroundcolor=\color{codegray},
+}
+
+% inline codeboxes
+\definecolor{codegray}{rgb}{0.95,0.95,0.95}
+\lstset{%1
+  basicstyle=\ttfamily,
+  breaklines = true,
+  backgroundcolor=\color{codegray},
+}
+\newcommand*{\codebox}[1]{\Colorbox{codegray}{\lstinline|#1|}}
+
+% short reverse to
+\newcommand{\lrarr}{\longleftrightarrow}
 
 \makeatletter % Author: https://tex.stackexchange.com/questions/218587/how-to-set-one-header-for-each-page-using-multicols
 \renewcommand{\section}{\@startsection{section}{1}{0mm}%
