--- a/ece3-24fall/ece3-cheat-sheet.tex
+++ b/ece3-24fall/ece3-cheat-sheet.tex
@@ -23,6 +23,14 @@
 \usepackage{listings}
 \usepackage{realboxes}
 
+% https://tex.stackexchange.com/a/39785
+% https://tex.stackexchange.com/a/42081/228904
+\usepackage{circuitikz}
+\usepackage{siunitx}
+
+\usepackage{graphicx}
+\graphicspath{ {./images/} }
+
 \let\bar\overline
 
 \include{sections/def}
@@ -31,6 +39,8 @@
 %\footnotesize
 \small
 \begin{multicols*}{5}
-\lipsum\lipsum
+\input{sections/quick-tips.tex}
+\input{sections/equations.tex}
+\input{sections/circuits.tex}
 \end{multicols*}
 \end{document}
