--- a/ece3-24fall/sections/def.tex
+++ b/ece3-24fall/sections/def.tex
@@ -27,16 +27,21 @@
 }
 
 % inline codeboxes
-\definecolor{codegray}{rgb}{0.95,0.95,0.95}
-\lstset{%1
-  basicstyle=\ttfamily,
-  breaklines = true,
-  backgroundcolor=\color{codegray},
-}
 \newcommand*{\codebox}[1]{\Colorbox{codegray}{\lstinline|#1|}}
 
 % short reverse to
 \newcommand{\lrarr}{\longleftrightarrow}
+
+% nice angle command
+\newcommand{\Angle}{\,_{^\angle}\,}
+
+% AC commands
+% variables used in this doc
+\newcommand{\acphs}[2]{#1\Angle #2\unit{\degree}}
+\newcommand{\acamp}[2]{#1\Angle #2\unit{\degree}\unit{\ampere}}
+\newcommand{\acvolt}[2]{#1\Angle #2\unit{\degree}\unit{\volt}}
+\newcommand{\acimp}[2]{#1\Angle #2\unit{\degree}\unit{\ohm}}
+\newcommand{\acimpsq}[2]{#1\Angle #2\unit{\degree}\unit{\ohm\squared}}
 
 \makeatletter % Author: https://tex.stackexchange.com/questions/218587/how-to-set-one-header-for-each-page-using-multicols
 \renewcommand{\section}{\@startsection{section}{1}{0mm}%
