Final adjustments to ece3 sheet

--- a/ece3-24fall/ece3-cheat-sheet.tex
+++ b/ece3-24fall/ece3-cheat-sheet.tex
@@ -26,6 +26,7 @@
 % https://tex.stackexchange.com/a/39785
 % https://tex.stackexchange.com/a/42081/228904
 \usepackage{circuitikz}
+\usetikzlibrary{arrows.meta}
 \usepackage{siunitx}
 
 \usepackage{graphicx}
@@ -42,5 +43,6 @@
 \input{sections/quick-tips.tex}
 \input{sections/equations.tex}
 \input{sections/circuits.tex}
+\input{sections/units-conv.tex}
 \end{multicols*}
 \end{document}
