--- a/ece3-24fall/sections/quick-tips.tex
+++ b/ece3-24fall/sections/quick-tips.tex
@@ -8,10 +8,10 @@ add it to the equation.
 
 \subsection*{Kirchhoff Voltage Law (KVL)}
 Try to avoid. If not possible do KCL first. Label all the branches and
-make up a current direction. Do all the loops clockwise (for ease). The
-chosen current directions determine where are voltage changes (+ to - or
-- to +). If the loop encounters + to - then make the term negative and
-make it positive otherwise.
+make up a current direction. Do all the loops counter clockwise (for
+ease). The chosen current directions determine where are voltage changes
+(+ to - or - to +). If the loop encounters + to - then make the term
+negative and make it positive otherwise.
 
 \subsection*{Transients Cap/Ind}
 After a long time.
