Add two new ratios to engr111

--- a/engr111-25winter/sections/formulae.tex
+++ b/engr111-25winter/sections/formulae.tex
@@ -8,6 +8,8 @@ Quick Ratio = (Current Assets - Inventory) / Current Liabilities \\
 Cash Ratio = Cash / Current Liabilities \\
 Debt/Equity = Total Debt / Total Equities \\
 Total Debt Ratio = (Total Assets - Total Equity ) / Total Assets \\
+Dividend Payout Ratio = Dividends / Net Income \\
+Retention Ratio = (Net Income - Dividends) / Net Income \\
 \end{scriptsize}
 \subsection*{others}
 \begin{scriptsize}
