Add definition section in engr111

--- a/engr111-25winter/engr111-cheat-sheet.tex
+++ b/engr111-25winter/engr111-cheat-sheet.tex
@@ -36,5 +36,6 @@
 % \newpage
 \begin{multicols*}{3}
   \input{sections/formulae.tex}
+  \input{sections/quick-concepts.tex}
 \end{multicols*}
 \end{document}
