Major update to cs118 sheet

--- a/cs118-25winter/cs118-cheat-sheet.tex
+++ b/cs118-25winter/cs118-cheat-sheet.tex
@@ -37,6 +37,9 @@
 \small
 \begin{multicols*}{5}
   \input{sections/hw-probs.tex}
+  \input{sections/quick-tips.tex}
+  \input{sections/formulae.tex}
+  \input{sections/term-index.tex}
 \end{multicols*}
 % \newpage
 % \begin{multicols*}{3}
