--- a/cs118-25winter/sections/formulae.tex
+++ b/cs118-25winter/sections/formulae.tex
@@ -1,6 +1,6 @@
 \section{Formulae}
 \subsection*{TCP Retransmission}
-\begin{itemize}
+\begin{itemize}[itemsep=0em]
   \item \textbf{RTO}: retransmission timer
   \item \textbf{RTT}: retransmission timeout
   \item \textbf{SRTT}: sample retransmission timeout
@@ -18,7 +18,7 @@ typical params for a and b: \\
 $a = 1 / 8, b = 1 / 4$ \\
 \small
 \subsection*{Single Hop Delay}
-\begin{itemize}
+\begin{itemize}[itemsep=0em]
   \item $q$ : \# packets in queue
   \item $d$ : link length
   \item $R$ : bandwidth
