Remove german formatting

--- a/cs118-25winter/sections/quick-tips.tex
+++ b/cs118-25winter/sections/quick-tips.tex
@@ -133,5 +133,5 @@ window. ACKs are cumulative. It does not buffers packets.
 \subsection*{Selective Repeat}
 Sender has sliding window and can send many unacknowledged packets.
 Receiver acknowledges each received packet, and it buffers them
-(out-of-order if necessary). Sender "selects" ACKed packets and re-sends
+(out-of-order if necessary). Sender ``selects'' ACKed packets and re-sends
 unACKed ones when their individual timers expire.
