Add EFN formula to engr111

--- a/engr111-25winter/sections/formulae.tex
+++ b/engr111-25winter/sections/formulae.tex
@@ -27,4 +27,11 @@ Return on Assets = Net Income / Total Assets \\
 Return on Equity = Net Income / Total Equity \\
 EBITDA Margin = EBITDA / Sales \\
 Capital Intensity = Total Assets / Sales \\
+\subsection*{EFN}
+Where \\
+$\mathrm{AS} = \frac{\mathrm{Assets}}{\mathrm{Sales}}\times\Delta\mathrm{Sales}$ \\
+$\mathrm{LS} = \frac{\mathrm{Spon. Liab.}}{\mathrm{Sales}}\times\Delta\mathrm{Sales}$ \\
+$\Delta\mathrm{Earnings} = \mathrm{Profit Margin}\times\mathrm{Sales}_{\mathrm{proj}}\times\left(1 - d\right)$ \\
+Then \\
+$\mathrm{EFN} = \mathrm{AS} - \mathrm{LS} - \Delta\mathrm{Earnings}$ \\
 \end{scriptsize}
