Add notes from lecture to engr111

--- a/engr111-25winter/sections/formulae.tex
+++ b/engr111-25winter/sections/formulae.tex
@@ -27,6 +27,7 @@ Return on Assets = Net Income / Total Assets \\
 Return on Equity = Net Income / Total Equity \\
 EBITDA Margin = EBITDA / Sales \\
 Capital Intensity = Total Assets / Sales \\
+\end{scriptsize}
 \subsection*{EFN}
 Where \\
 $\mathrm{AS} = \frac{\mathrm{Assets}}{\mathrm{Sales}}\times\Delta\mathrm{Sales}$ \\
@@ -34,4 +35,8 @@ $\mathrm{LS} = \frac{\mathrm{Spon. Liab.}}{\mathrm{Sales}}\times\Delta\mathrm{Sa
 $\Delta\mathrm{Earnings} = \mathrm{Profit Margin}\times\mathrm{Sales}_{\mathrm{proj}}\times\left(1 - d\right)$ \\
 Then \\
 $\mathrm{EFN} = \mathrm{AS} - \mathrm{LS} - \Delta\mathrm{Earnings}$ \\
-\end{scriptsize}
+$b = (1 - d)$
+\subsection*{Internal Growth Rate}
+$\mathrm{IGR} = \frac{\mathrm{ROA}\times b}{1-\mathrm{ROA}\times b}$
+\subsection*{Sustainable Growth Rate}
+$\mathrm{SGR} = \frac{\mathrm{ROE}\times b}{1-\mathrm{ROE}\times b}$
