Minor modifications to engr111

--- a/engr111-25winter/sections/formulae.tex
+++ b/engr111-25winter/sections/formulae.tex
@@ -23,20 +23,22 @@ Receivables Turnover = Sales / Accounts Receivable \\
 Days' Sales in Receivables = 365 / Receivables Turnover \\
 Total Asset Turnover = Sales  /Total Assets  \\
 Profit Margin = Net Income / Sales \\
-Return on Assets = Net Income / Total Assets \\
-Return on Equity = Net Income / Total Equity \\
+\textbf{R}eturn \textbf{o}n \textbf{A}ssets = Net Income / Total Assets \\
+\textbf{R}eturn \textbf{o}n \textbf{E}quity = Net Income / Total Equity \\
 EBITDA Margin = EBITDA / Sales \\
 Capital Intensity = Total Assets / Sales \\
 \end{scriptsize}
 \subsection*{EFN}
 Where \\
 $\mathrm{AS} = \frac{\mathrm{Assets}}{\mathrm{Sales}}\times\Delta\mathrm{Sales}$ \\
-$\mathrm{LS} = \frac{\mathrm{Spon. Liab.}}{\mathrm{Sales}}\times\Delta\mathrm{Sales}$ \\
-$\Delta\mathrm{Earnings} = \mathrm{Profit Margin}\times\mathrm{Sales}_{\mathrm{proj}}\times\left(1 - d\right)$ \\
+$\mathrm{LS} = \frac{\text{Spon. Liab.}}{\mathrm{Sales}}\times\Delta\mathrm{Sales}$ \\
+$\Delta\mathrm{Earnings} = \text{Profit Margin}\times\text{Proj. Sales}\times\left(1 - d\right)$ \\
 Then \\
 $\mathrm{EFN} = \mathrm{AS} - \mathrm{LS} - \Delta\mathrm{Earnings}$ \\
-$b = (1 - d)$
+$d = \text{dividend payout ratio}$ \\
+$b = (1 - d) = \text{retention ratio}$ \\
+
 \subsection*{Internal Growth Rate}
 $\mathrm{IGR} = \frac{\mathrm{ROA}\times b}{1-\mathrm{ROA}\times b}$
 \subsection*{Sustainable Growth Rate}
-$\mathrm{SGR} = \frac{\mathrm{ROE}\times b}{1-\mathrm{ROE}\times b}$
+$\mathrm{SGR} = \frac{\mathrm{ROE}\times b}{1-\mathrm{ROE}\times b}$ \\
