Add quiz items to engr111

--- a/engr111-25winter/engr111-cheat-sheet.tex
+++ b/engr111-25winter/engr111-cheat-sheet.tex
@@ -21,6 +21,7 @@
 \usepackage{etoolbox}
 \usepackage{listings}
 \usepackage{realboxes}
+\usepackage{enumitem} % allow to change list item separation
 
 \let\bar\overline
 
@@ -36,5 +37,6 @@
 \begin{multicols*}{3}
   \input{sections/formulae.tex}
   \input{sections/quick-concepts.tex}
+  \input{sections/quizzes.tex}
 \end{multicols*}
 \end{document}
