Finished cheat sheet for engr111 final

--- a/engr111-25winter/engr111-cheat-sheet.tex
+++ b/engr111-25winter/engr111-cheat-sheet.tex
@@ -35,8 +35,9 @@
 % \end{multicols*}
 % \newpage
 \begin{multicols*}{3}
-  \input{sections/formulae.tex}
   \input{sections/quick-concepts.tex}
+  \input{sections/formulae.tex}
+  \input{sections/final.tex}
   \input{sections/quizzes.tex}
 \end{multicols*}
 \end{document}
