--- a/engr111-25winter/sections/def.tex
+++ b/engr111-25winter/sections/def.tex
@@ -47,8 +47,8 @@ von~Tim~S.,~Seite~\thepage~von~2
 }
 
 \newtcolorbox{myquote}{
-  colback=yellow!20!white,
-  colframe=yellow!75!black,
+  colback=white,
+  colframe=yellow!25!black,
   grow to right by=-2mm,
   grow to left by=-2mm,
   boxrule=0pt,
