--- a/engr111-25winter/sections/formulae.tex
+++ b/engr111-25winter/sections/formulae.tex
@@ -1,5 +1,5 @@
 \section{Formulae}
-\subsection*{ratios}
+\subsection{ratios}
 \begin{scriptsize}
 P/E Ratio = Price Per Share / Earnings Per Share \\
 Market to Book Ratio = Market Value per Share / Book Value per Share \\
@@ -11,7 +11,7 @@ Total Debt Ratio = (Total Assets - Total Equity ) / Total Assets \\
 Dividend Payout Ratio = Dividends / Net Income \\
 Retention Ratio = (Net Income - Dividends) / Net Income \\
 \end{scriptsize}
-\subsection*{others}
+\subsection{others}
 \begin{scriptsize}
 Market Capitalization = Price per share $\times$ \# Shares Outstanding \\
 Equity Multiplier = Total Assets / Total Equity \\
@@ -28,7 +28,7 @@ Profit Margin = Net Income / Sales \\
 EBITDA Margin = EBITDA / Sales \\
 Capital Intensity = Total Assets / Sales \\
 \end{scriptsize}
-\subsection*{EFN}
+\subsection{EFN (external financing need)}
 Where \\
 $\mathrm{AS} = \frac{\mathrm{Assets}}{\mathrm{Sales}}\times\Delta\mathrm{Sales}$ \\
 $\mathrm{LS} = \frac{\text{Spon. Liab.}}{\mathrm{Sales}}\times\Delta\mathrm{Sales}$ \\
@@ -38,7 +38,18 @@ $\mathrm{EFN} = \mathrm{AS} - \mathrm{LS} - \Delta\mathrm{Earnings}$ \\
 $d = \text{dividend payout ratio}$ \\
 $b = (1 - d) = \text{retention ratio}$ \\
 
-\subsection*{Internal Growth Rate}
+\subsection{Internal Growth Rate}
 $\mathrm{IGR} = \frac{\mathrm{ROA}\times b}{1-\mathrm{ROA}\times b}$
-\subsection*{Sustainable Growth Rate}
-$\mathrm{SGR} = \frac{\mathrm{ROE}\times b}{1-\mathrm{ROE}\times b}$ \\
+\subsection{Sustainable Growth Rate}
+$\mathrm{SGR} = \frac{\mathrm{ROE}\times b}{1-\mathrm{ROE}\times b}$
+\subsection{Net Present Value}
+$\mathrm{NVP} = \sum_{n=0}^T~\text{CF}_n/(1+r)^n$
+\subsection{Annuity}
+$\mathrm{PV} = (A/r)(1-(1+r)^{-n})$
+\subsection{Holding Period Return}
+This is the return that an investor would get when holding an investment over a period of years.
+$\mathrm{HPR} = (1+R_1)\times(1+R_2)\times\dots\times(1+R_T) - 1$
+\subsection{Geometric Return}
+$\mathrm{R_g} = \sqrt[T]{(1+R_1)\times(1+R_2)\times\dots\times(1+R_T)} - 1$
+\subsection{Arithmetic Return}
+$\mathrm{R_g} = \frac{(1+R_1)+(1+R_2)+\dots+(1+R_T)}{T}$
