--- a/engr111-25winter/sections/quick-concepts.tex
+++ b/engr111-25winter/sections/quick-concepts.tex
@@ -1,5 +1,5 @@
 \section{Concepts}
-\subsection*{Growth Rates}
+\subsection{Growth Rates}
 \blockquote{\textbf{Internal growth rate} is the maximum growth rate a
 firm can achieve without external financing (including debt) and using
 only retained earnings.}
@@ -11,3 +11,7 @@ constant debt-equity ratio.}
 \blockquote{If $\Delta$ in retained earnings is higher than $\Delta$ in
 Assets minus Spontaneous Liabilities then $\mathrm{EFN} < 0$, and vice
 versa. When these values are equal that is the internal growth rate}
+
+\begin{center}
+  \includegraphics[width=0.25\textwidth]{images/portfolio-analysis.png}
+\end{center}
