--- a/engr111-25winter/sections/quizzes.tex
+++ b/engr111-25winter/sections/quizzes.tex
@@ -1,85 +1,242 @@
 \section{Quizzes}
-\begin{scriptsize}
-  \begin{enumerate}[itemsep=0em]
+\begin{tiny}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
     \item Which of the following is NOT accurate?
-          \begin{itemize}[itemsep=0em]
+          \begin{itemize}[itemsep=-0.2em]
             \item Capital Structure refers to the relative share of Debt and Equity in a company's Balance Sheet.
             \item \textbf{If a company obtains new debt, then, the Liabilities\&Equity (right) side of the balance sheet would be higher than the Assets (left) side in a Balance Sheet.}
             \item Net Working Capital will deteriorate (go down) if a company buys fixed assets using cash.
           \end{itemize}
     \item Balance Sheet has to be in balance (right and left sides being equal to each other) at the end of each year only.
-          \begin{itemize}[itemsep=0em]
-            \item False
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
           \end{itemize}
     \item "The Principal-Agent Problem" refers to the conflict that arises among the C-level executives of a company.
-          \begin{itemize}[itemsep=0em]
-            \item False
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
           \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
+    \item Account Receivable refers to the total value of sales that a company made within a year.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
+          \end{itemize}
+    \item Which of the following is NOT accurate?
+          \begin{itemize}[itemsep=-0.2em]
+            \item Goodwill account will capture some of the intangible assets that a company may have such as customer loyalty or company image.
+            \item \textbf{Only tangible assets can be recorded under the Balance Sheet.}
+            \item All inventory has to be recorded at cost.
+            \item An asset cannot be recorded under the Balance Sheet unless it is acquired as a result of a transaction.
+          \end{itemize}
+    \item Depreciation is recorded cumulatively on the Balance Sheet. This means that the depreciation value listed under the 2024 Balance Sheet does not represent the total depreciation for the year 2024 alone. Instead, it reflects the total depreciation of the assets on the Balance Sheet since their acquisition.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
     \item Which of the following is NOT a reason for repurchase of company stock?
-          \begin{itemize}[itemsep=0em]
+          \begin{itemize}[itemsep=-0.2em]
             \item \textbf{To reduce Long Term Debt}
             \item Send a signal to the market due to undervaluation
             \item Not having better investment opportunities
             \item Increase EPS
           \end{itemize}
     \item When a company's stock price goes up in the secondary market, the increase in value is recorded under Equity and under Current Assets.
-          \begin{itemize}[itemsep=0em]
-            \item False
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
           \end{itemize}
     \item Most companies would deduct the entire cost of an asset in the income statement for the year of the purchase.
-          \begin{itemize}[itemsep=0em]
-            \item False
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
           \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
     \item The Current Ratio is the only financial ratio without a set industry standard, with a higher ratio generally indicating better financial health.
-          \begin{itemize}[itemsep=0em]
-            \item False
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
           \end{itemize}
     \item Which of the following is NOT accurate?
-          \begin{itemize}[itemsep=0em]
+          \begin{itemize}[itemsep=-0.2em]
             \item Debt to Equity Ratio (D/E) includes all Liabilities whether borrowed or owed as bills that have not been paid yet.
             \item Comparable or higher than industry standard EBIT coupled with lower than industry standard Net Income would invite take-over.
             \item \textbf{All else being equal, the discrepancy between the current ratio and the quick ratio is expected to be greater for Meta than for Target.}
           \end{itemize}
     \item Financial health assessment of a company that has a Debt/Equity ratio that is lower than industry standard would involve:
-          \begin{itemize}[itemsep=0em]
+          \begin{itemize}[itemsep=-0.2em]
             \item A potential holding back on scaling and lost opportunities to grow
             \item Lack of visible discipline in undertaking and paying off debt on time, missing the opportunity to establish responsible track record for future potential debt obligation cost reduction.
             \item Missed opportunity on reducing tax obligation
             \item \textbf{All of the above}
           \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
     \item Market capitalization is a more effective metric than balance sheet size for estimating a company's valuation.
-          \begin{itemize}[itemsep=0em]
-            \item False
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
           \end{itemize}
     \item From an investor's perspective, Return on Equity (ROE) is a more instructive metric than Profit Margin.
-          \begin{itemize}[itemsep=0em]
-            \item True
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
           \end{itemize}
     \item All else being equal, a company with a higher retention ratio can achieve a higher growth rate, particularly if low-cost borrowing opportunities are unavailable.
-          \begin{itemize}[itemsep=0em]
-            \item True
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
           \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
     \item Everything else being equal, if a positive-profit company does not grow and does not acquire new debt, its D/E ratio is expected to stay the same.
-          \begin{itemize}[itemsep=0em]
-            \item False
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
           \end{itemize}
     \item If the External Financing Need (EFN) is negative, the company has surplus funds and does not need to borrow money to achieve its growth target
-          \begin{itemize}[itemsep=0em]
-            \item True
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
           \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
     \item A company that is growing at the internal growth rate will experience increasing D/E ratio.
-          \begin{itemize}[itemsep=0em]
-            \item False
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
           \end{itemize}
     \item If a company is growing according to the "percentage of sales" approach, then, the Total Asset Turnover (Sales/Assets) will go down over time.
-          \begin{itemize}[itemsep=0em]
-            \item False
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
           \end{itemize}
     \item If a company is growing at the sustainable growth rate, it is expected that
-          \begin{itemize}[itemsep=0em]
+          \begin{itemize}[itemsep=-0.2em]
             \item The interest payments will not go up
             \item The Capital Structure of the company will change
             \item \textbf{If the profit ad the retention ratios are positive, it is expected that the company acquires new debt.}
           \end{itemize}
   \end{enumerate}
-\end{scriptsize}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
+    \item A tail heavy cash flow would lose its value at a higher rate than the head heavy cash flow as the market rate is increasing.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+    \item The value of a project that asks for \$1,000 today and offers a \$1,200 is not equal to \$200 because
+          \begin{itemize}[itemsep=-0.2em]
+            \item \$1,000 and \$1,200 do not have the same units, therefore cannot be added
+            \item As long as a dollar has alternative opportunities in the market and a dollar invested today can grow in value over time, the present value of a future cash flow will be lower than its nominal future value.
+            \item The value of a project refers to what the project provides over and above its best alternative
+                  \textbf{\item All of the above}
+          \end{itemize}
+    \item As the frequency of compounding is increasing, the effective rate increases at an increasing rate.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
+          \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
+    \item The payback period for a project is longer than discounted payback period given a positive interest rate.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
+          \end{itemize}
+    \item A project that is accepted according to the discounted payback period may have negative NPV.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
+          \end{itemize}
+    \item A project that has positive NPV will definitely be accepted according to the payback period method.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
+          \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
+    \item For Capital Budgeting purposes, "Allocated Costs" should not be included in the cash flow.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+    \item In capital budgeting, interest expense is excluded from cash flow analysis to ensure that financing costs are not limited solely to interest, nor the source of funding restricted to borrowing.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+    \item Salvage value differs from market value when there is a discrepancy between an asset's market value and book value.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
+    \item Sensitivity analysis examines how changes in one variable at a time impact the outcome while the scenario analysis assesses the impact of multiple variables changing simultaneously under different conditions.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+    \item Accounting Break Even Quantity gives us the quantity to be sold given a certain per unit price and cost structure to make zero Net Income.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+    \item Financial Break-Even Price is the per-unit price that must be charged at a given sales volume (quantity) to achieve zero net income while covering the out-of-pocket costs and also the opportunity cost of every dollar invested in the project.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
+    \item Easy: As the price of a bond goes up, the yield it would provide to an investor would go up as well.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
+          \end{itemize}
+    \item Moderate: Given two 'investment grade' bonds—one short-term and one long-term—the investor would choose the long-term bond if they expect market interest rates to decline in the future.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+    \item Moderate: If the coupon rate for a bond is lower than the market rate, the bond's price will adjust, making it a discount bond.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
+    \item High inflation expectations and liquidity concerns would drive up the yield of a bond.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+    \item All else being equal, a municipal (state) bond would typically offer a higher yield than a U.S. Treasury bond.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
+          \end{itemize}
+    \item As the default rate goes up, the promised yield would go down.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
+          \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}[itemsep=-0.5em]
+    \item If the current yield is greater than the coupon rate, the bond should be selling at discount, i.e., the price is less than the face value.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+    \item If a bond experiences a negative capital gains yield while the market rate remains unchanged, it follows that the coupon rate must be higher than the market rate.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+    \item As the yield curve's slope flattens, the yield spread between long-term and short-term bonds decreases.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+  \end{enumerate}
+  \subsection{Quiz}
+  \begin{enumerate}
+    \item When evaluating past investment performance, the geometric return provides a more accurate assessment of an investor's expected return compared to arithmetic return, which is typically used to estimate the future expected returns.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{True}
+          \end{itemize}
+    \item As the correlation between two risky assets increases, the risk of the portfolio formed by investing in these two assets would go down.
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
+          \end{itemize}
+    \item A portfolio is defined by the assets it consists of and their corresponding weights, with all assets weights being non-negative
+          \begin{itemize}[itemsep=-0.2em]
+            \item \textbf{False}
+          \end{itemize}
+  \end{enumerate}
+\end{tiny}
