Fix typo in subscript

--- a/engr111-25winter/sections/final.tex
+++ b/engr111-25winter/sections/final.tex
@@ -91,7 +91,7 @@ Covariance and correlation:
 
 \blockquote{
   $\mathrm{Cov}(A,B) = \sigma_{A,B} = \frac{\sum(r_{A,t}-\overline{r}_A)(r_{B,t}-\overline{r}_B)}{T-1}$ \\
-  $\mathrm{Corr}(A,B) = \rho{A,B} = \frac{\sigma_{A,B}}{\sigma_A\cdot\sigma_B}$
+  $\mathrm{Corr}(A,B) = \rho_{A,B} = \frac{\sigma_{A,B}}{\sigma_A\cdot\sigma_B}$
 }
 
 For a portfolio (weighted average and weighted variance):
