Update cheat sheet cs m151b

--- a/csm151b-25winter/csm151b-cheat-sheet.tex
+++ b/csm151b-25winter/csm151b-cheat-sheet.tex
@@ -39,7 +39,11 @@
 %   \lipsum
 % \end{multicols*}
 % \newpage
-\begin{multicols*}{3}
-  \lipsum
+\begin{multicols*}{2}
+  \include{sections/formulas}
 \end{multicols*}
+% \newpage
+% \begin{multicols*}{3}
+%   \lipsum
+% \end{multicols*}
 \end{document}
